--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,14 +47,17 @@ dependencies {
     implementation 'com.uwetrottmann.tmdb2:tmdb-java:2.6.0'
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'com.google.android.material:material:1.8.0'
+    //noinspection GradleCompatible
 
     //-------------------------------------------------------//
 
+    implementation platform('com.google.firebase:firebase-bom:31.4.0')
     implementation 'com.google.firebase:firebase-auth:21.3.0'
     implementation 'com.google.firebase:firebase-analytics:21.2.2'
     implementation 'com.google.firebase:firebase-firestore:24.5.0'
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-database:20.2.0'
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
 
 
 
